@@ -19,6 +19,7 @@ Updated by: FPtje Falco
 [ADD] Ability to knock on doors you don't own(left/right mouse with the keys weapon)
 [ADD] Some citizen models(Now not every citizen has the same model)
 [ADD] Teamban and teamunban (chat = /teamban, console = rp_teamban): Ban/unban a player from a certain team. Use: /teamban <player> <team> or rp_teamban <player> <team>
+[ADD] Lottery: The mayor can start a lottery and players can enter the lottery with $50. At the end one of the players wins all the money. Toggle with rp_lottery 1/0
 [CHANGE] All door controls are now done though reload with the Keys weapon.
 [CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
 [CHANGE] The way prop protection works for admins
